# open-campus

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  LICENSE.md  Makefile  OPENCODE.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.shadow.yml  docker-compose.yml  pyproject.toml  standalone-gaokao.html
.github/: dependabot.yml
services/agent-orchestrator/: README.md  pyproject.toml
services/agent-orchestrator/src/: answer_generator.py  audit_logger.py  compliance_gate.py  intent_classifier.py  mode_router.py  pipeline.py
services/agent-orchestrator/src/bt/: base.py
services/agent-orchestrator/src/consultation/: stage.py
services/agent-orchestrator/src/fsm/: emotional_support_machine.py  machine.py
services/agent-orchestrator/src/heart/: __init__.py  api.py  approval.py  audit.py  engine.py  errors.py  events.py  evidence_gate.py  execution.py  models.py  policies.py  safety_events.py  service.py  service_config.py  service_models.py  store.py  store_sqlite.py  team.py  tool_registry.py  write_guard.py
services/agent-orchestrator/src/nodes/: consultation_answer.py  consultation_stage.py  emotional_support_nodes.py  pipeline_nodes.py  recommendation_routing.py
services/agent-orchestrator/src/policies/: admissions_answer_policy.py
services/agent-orchestrator/src/trees/: chat_message_tree.py  emotional_support_tree.py
services/agent-orchestrator/tests/: admissions_answer_policy_test.py  bt_fsm_test.py  consultation_stage_test.py  emotional_support_test.py  pipeline_test.py  tone_quality_smoke_test.py
(+2817 files in other folders)
