[project]
name = "metacampus-agent-orchestrator"
version = "0.0.0"
requires-python = ">=3.11"
description = "MetaCampus agent orchestrator — behavior tree FSM, multi-turn dialogue"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.48.0",
]

[tool.uv]
package = false
